syntax = "proto3";
package cosmos.auth.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/auth/v1beta1/auth.proto";

option go_package = "cosmossdk.io/x/auth/types";

// Msg defines the x/auth Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the x/auth module
  // parameters. The authority defaults to the x/gov module account.
  //
  // Since: cosmos-sdk 0.47
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // NonAtomicExec allows users to submit multiple messages for non-atomic execution.
  rpc NonAtomicExec(MsgNonAtomicExec) returns (MsgNonAtomicExecResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "cosmos-sdk/x/auth/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/auth parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}

// MsgNonAtomicExec defines the Msg/NonAtomicExec request type.
message MsgNonAtomicExec {
  option (cosmos.msg.v1.signer) = "signer";

  string   signer                   = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated google.protobuf.Any msgs = 2 [(cosmos_proto.accepts_interface) = "cosmos.base.v1beta1.Msg"];
}

// NonAtomicExecResult defines the response structure for executing a
// MsgNonAtomicExec.
message NonAtomicExecResult {
  string              error = 1;
  google.protobuf.Any resp  = 2;
}

// MsgNonAtomicExecResponse defines the response of MsgNonAtomicExec.
message MsgNonAtomicExecResponse {
  repeated NonAtomicExecResult results = 1;
}
